--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,42 +1,40 @@
 name: Node CI
-
-on: [push]
-
+'on':
+  - push
 jobs:
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
-
+  - uses: actions/upload-artifact@master
+    with:
+      name: webpack artifacts
+      path: public/
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
           npm install
           npm run build
-
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
-
-    steps:
+test:
+  needs: build
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      os:
+        - ubuntu-latest
+        - windows-2016
+      node-version:
+        - 12.x
+        - 14.x
+  steps:
     - uses: actions/checkout@v2
     - uses: actions/download-artifact@master
       with:
         name: webpack artifacts
         path: public
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: 'Use Node.js ${{ matrix.node-version }}'
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, and test
+        node-version: '${{ matrix.node-version }}'
+    - name: 'npm install, and test'
       run: |
         npm install
         npm test
